--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,99 +11,85 @@
     font-family: bogart;
     src: url(../Fonts/Bogart-Bold-trial.ttf);
 }
-
 a{
     text-decoration: none;
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-
+.encabezado{
+    background-color: #222725;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 160px;
+    padding: 5px;
+}
 .items{
     display: inline-block;
     font-family: sans-serif;
-    padding: 5px 10px;
-    font-size: 3rem;
+    padding: 5px;
     border-radius: 2rem;
 }
 .items:hover{
     background-color: rgb(166, 166, 166);
 }
-
 .pages{
     text-decoration: none;
     font-family: Tommy;
-    font-size: 2.5rem; 
+    font-size: 300%; 
     color: blanchedalmonds;
 }
 .pages:hover{
     color: #222725;
 }
-.Menu{ 
-    padding: 1rem;
-    background-color: #222725;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.navegacion1{
-    list-style-type: none;
-    color: aliceblue;
-    margin-right: 3rem;
-}
-.navegacion2{
-    list-style-type: none;
-    color: aliceblue;
-    margin-left: 200px;
-}
-
 .imagen{
-    width: 12rem;
-    height: 12rem;
-    background-color: #222725;
-    position: absolute;
-    align-items: center;
+    height: 150px;
+    width: auto;
 }
-
+.navegacion{
+    list-style: none;
+    color: aliceblue;
+}
+.items{
+    display: inline-block;
+    padding: 5px;
+    font-size: 100%;
+    font-family: sans-serif;
+}
 .principal_page{ 
     background-image: url(../images/barber.jpg);
-    background-size: 100vw 100vh;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
     flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
     width: 100vw;
     
 }
-
 .titulo1{ 
-    min-height: 100px;
     font-size: 6rem;
-    margin: 0rem 7rem 0rem 7rem;
-    padding: 8rem 4rem; 
+    margin: 3rem 0rem;
+    display: inline-block;
     text-align: center; 
-    display: inline-block;   
     -webkit-text-stroke: 3px;
     -webkit-text-stroke-color: rgb(179, 179, 179);
 }
-
 .titulo2{ 
     font-size: 6rem;
-    margin: 0rem; 
-    padding: 8rem 6rem;
+    margin-bottom: 3rem;
     text-align: center;
     -webkit-text-stroke: 3px;
     -webkit-text-stroke-color: white;
     
 }
-
 h1{ 
     font-family: bogart;
 }
-
 h2{
     font-family: bogart;
 }
-
 h3{
     color: darkslategray;
     font-size: 2.5rem;
@@ -121,42 +107,33 @@ main{
     background-color: #c2c2c2;
 }
 .pie{
-    background-color: rgb(196, 194, 194);
+    background-color: rgb(100, 100, 100);
     background-size: 3rem;
     padding: 1rem 0rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    
+    gap: 20px;
     border-top: black;
     border-top-width: 3px;
     border-top-style: solid;
     width: 100vw;
+    margin: 0rem;
 }
-
 .seguinos{
-    font-size: 3rem;
+    font-size: 200%;
     font-family: Tommy;
     color: cornsilk;
     text-align: center;
-    display: inline-block;  
-    -webkit-text-stroke: 2.5px;
-    -webkit-text-stroke-color: #163535;
 }
-
 .instagram{
-    height: 60px;
-    width: 60px;
-    display: inline-block;
-    margin-left: 1rem;
-    position: relative;
-    
+    height: 40px;
+    width: 40px;
 }
-
-.la_pelu {
+.la_pelu{
     margin-top: 2rem;
-    margin-left: 1rem;
-    max-width: 80vh;
+    max-width: 100vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 30% 30% 30%;
@@ -165,54 +142,33 @@ main{
         "veni carrusel"
         "veni carrusel";
     gap: 1rem;
-    
 }
-
 .fotos_pelu {
     width: 48vw;
     border-radius: 2rem;
 }
-
 .titulos_pages {
-    font-size: 4rem;
+    font-size: 400%;
     font-family: Tommy;
     color: black;
-    text-align: left;
-    margin-left: 3rem;
-
+    text-align: center;
+    padding-top: 1rem;
 }
 .carrusel{
     grid-area: carrusel;
-    padding-bottom: 2rem;
-    width: 40vw;
-    padding-left: 5rem;
+    margin-bottom: 2rem;
+    width: 95%;
+    
 }
 .botones{
-    margin-left: 5rem;
-}
-
-.foto1 {
-    grid-area: foto1;
-}
-.foto2 {
-    grid-area: foto2;
-}
-.foto3 {
-    grid-area: foto3;
-}
-.foto4 {
-    grid-area: foto4;
-}
-.veni{
-    grid-area: veni;
-    margin-left: 1rem;
+    margin-left: 0rem;
 }
 .atencion{
     grid-area: atencion;
     margin-left: 1rem;
 }
-
 .veni {
+    grid-area: veni;
     margin-left: 1rem;
     width: 45vw;
     display: flex;
@@ -227,45 +183,44 @@ main{
     border-width: .5rem;
 }
 .invitacion{
-    font-size: 3.5rem;
+    font-size: 300%;
     text-align: center;
 }
 .direccion{
-    font-size: 2rem;
+    font-size: 200%;
+    text-align: center;
 }
 .mapa{
     border: #222725;
     border-style: solid;
     border-width: 0.5rem;
 }
-
 .atencion{
     margin-right: 1rem;
     width: 45vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
-    gap: 2rem;
+    padding: .5rem;
+    gap: 5px;
     background-color:#163535;
     border: #5a7979;
     border-radius: 1rem;
     border-style: solid;
     border-width: .5rem;
-    padding-top: 2rem;
 }
-
 .horarios{
-    font-size: 3.5rem;
+    padding-top: 10px;
+    font-size: 270%;
     color: beige;
     text-decoration: underline;
+    text-align: center;
 }
-
 .dias{
     color: rgb(239, 200, 150);
-    font-size: 3rem;
+    font-size: 170%;
+    text-align: center;
 }
-
 .cerrado{
     margin-left: 1rem;
     width: 45vw;
@@ -280,16 +235,14 @@ main{
     border-style: solid;
     border-width: .5rem;
 }
-
 .pelu_cerrada{
     color: rgb(255, 255, 255);
     font-size: 3rem;
     text-align: center;
 }
-
 .pie_pages{
     padding: 2rem;
-    background-color: rgb(154, 153, 153);
+    background-color: rgb(100, 100, 100);
     border-top: black;
     border-top-width: 3px;
     border-top-style: solid;
@@ -298,144 +251,172 @@ main{
     font-size: 2rem;
     color: black;
 }
-
 .servicios{
-    margin: 2rem 2rem 0rem 2rem;
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas: 
-        "cortes barba cejas"
-        "cortes barba cejas"
-        "cortes barba cejas";
+    margin: 2rem .5rem 0rem .5rem;
+    padding: 1rem 0rem;
+    display: flex;
+    flex-direction: row;
     gap: 1rem;
     align-items: center;
     justify-content: center;
 }
-
 .cortes{
-    grid-area: cortes;
-    width: 30vw;
-    padding: 1rem;
+    background-image: url(../images/cortes.jpg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:  .5rem;
-    margin-bottom: 2rem;
+    justify-content: start;
+    width: 30vw;
+    height: 90vh;
     border: #151a1a;
-    border-radius: 1rem;
     border-style: solid;
     border-width: .5rem;
-    background-color: rgb(231, 227, 227);
 }
-
 .barba{
-    grid-area: barba;
-    width: 30vw;
-    padding: 1rem;
+    background-image: url(../images/barba.jpg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .5rem;
-    margin-bottom: 2rem;
+    justify-content: start;
+    width: 30vw;
+    height: 90vh;
     border: #151a1a;
-    border-radius: 1rem;
     border-style: solid;
     border-width: .5rem;
-    background-color: rgb(231, 227, 227);
 }
-
 .cejas{
-    grid-area: cejas;
-    width: 30vw;
-    padding: 1rem;
+    background-image: url(../images/cejas.jpg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .5rem;
-    margin-bottom: 2rem;
+    justify-content: flex-start;
+    width: 30vw;
+    height: 90vh;
     border: #151a1a;
-    border-radius: 1rem;
     border-style: solid;
     border-width: .5rem;
-    background-color: rgb(231, 227, 227);
+    
 }
-
-.servicios_img{
-    width: 25vw;
-    height: 60vh;
-    padding: 1rem;
-
-}
-
 .títulos_servicios{
-    font-size: 3.5rem;
+    font-size: 400%;
+    color: #091313;
+    -webkit-text-stroke: 3px;
+    -webkit-text-stroke-color: #245050;
 }
-
-.barberos{
+.diseños_cortes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    width: max-content;
     margin-top: 2rem;
-    padding: 3rem;
+    padding-bottom: 2rem;
+}
+.texto-diseños{
+    text-align: center;
+    font-size: 300%;
+}
+.diseños{
+    width: 40vw;
+    height: auto;
+}
+.eloy{
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3%;
+    padding: 2%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+.info_eloy{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
 }
-
-.barbero1{
+.foto_eloy{
+    width: 20vw;
+    height: 25vw;
+}
+.titulos_barberos{
+    font-size: 350%;
+}
+.caja_ivan{
+    background-color: orange;
+    padding: 2%;
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.info_ivan{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.barberos{
+    padding-bottom: 2%;
+}
+.barbero{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.barbero2{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.barbero3{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.imagen1{
-    padding: .5rem 2rem;
-}
-.imagen2{
-    padding: .5rem 2rem;
-}
-.imagen3{
-    padding: .5rem 2rem;
+.descripcion{
+    font-size: 200%;
 }
 .info{
     background-color: rgb(112, 112, 112);
     margin-top: -2rem;
-    padding: .5rem 1.5rem;
-    border-radius: 2rem;
+    padding: .5rem .5rem;
+    border-radius: 1.5rem;
     border-style: solid;
     border-color: #151a1a;
     border-width: .25rem;
 }
 .nombres{
+    font-size: 200%;
     color: white;
 }
+.hijos{
+    background-color: midnightblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2%;
+}
+.hijos_eloy{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
 .barberos_fotos{
-    width: 20vw;
-    height: 25vw;
+    width: 15vw;
+    height: 20vw;
     justify-items: center;
 }
 .redes_contacto{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
-
 .whatsapp{ 
     padding: 2rem 2rem 2rem 0rem;
     width: 48vw;
 }
-
 .numerowpp{
     margin: 2rem 0rem;
     display: flex;
@@ -450,9 +431,8 @@ main{
 .escribinos{
     text-align: center;
 }
-
 .wpplogo{
-    width: 200px;
+    width: 170px;
 }
 .calendario{
     width: 200px;
@@ -462,7 +442,6 @@ main{
     color: rgb(0, 107, 32);
     font-family: Tommy;
 }
-
 .redes_sociales{
     padding: 2rem 1rem;
     width: 45vw;
@@ -473,149 +452,286 @@ main{
 .inforedes{
     display: flex;
     flex-direction: row;
-    align-items: center;    
+    align-items: center; 
+    padding: 2rem 0rem;   
 }
-.otras_redes{
-    display: flex;
-    flex-direction: column;
-}
+
 .logosredes{
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: 5px;
     justify-content: center;
     align-items: center;
 }
 .logos{
-    width: 120px;
+    width: 150px;
 }
 .usuario{
-    font-size: 3rem;
+    font-size: 220%;
     font-family: Tommy;
 }
-
-
-@media (max-width: 1279px){
-    .navegacion1{
+@media(max-width: 1353px){
+    .redes_contacto{
         display: flex;
         flex-direction: column;
-        justify-content: left;
-        margin-left: 10px;
-    }
-    .navegacion2{
-        display: flex;
-        flex-direction: column;
-        justify-content: right;
-        margin-right: 10px;
-    }
-}
-@media(max-width: 1150px){
-    .servicios{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+        justify-content: space-evenly;
         align-items: center;
     }
-    .cortes{
-        width: 75vw;        
-    }
-    .barba{
-        width: 75vw;
-    }
-    .cejas{
-        width: 75vw;
-    }
-    .servicios_img{
-        width: 60vw;
-        height: 70vh;
-        padding: 1rem;
-    
-    }
-    
-}
-@media (max-width: 950px){
-    .titulos_pages{
-        padding-top: 3rem;
-    }
-}
-@media (max-width: 850px) {
-    .Menu{
+    .whatsapp{ 
+        padding: .5rem;
         width: 100vw;
-        padding: 0.5rem;
     }
-    .pages{
-        font-size: 2rem;
+    .numero{
+        font-size: 250%;
     }
-    .titulo1{
-        font-size: 5rem;
-        margin: 0rem 1.5rem;
-        padding: 2rem 1rem;
-    }
-    .titulo2{
-        font-size: 5rem;
-        margin: 0rem; 
-        padding: 2rem 1rem;
-    }
-    .imagen{
-        width: 8rem;
-        height: 8rem;
-        background-color: #222725;
-        position: absolute;
+    .redes_sociales{
+        padding: .5rem;
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
         align-items: center;
     }
+    .inforedes{
+        gap: 10px;
+    }
+    .encontranos_ig{
+        text-align: center;
+    }
 }
-@media (max-width: 700px){
+@media(max-width: 1241px){
+    .horarios{
+        font-size: 200%;
+    }
+    .dias{
+        font-size: 120%;
+    }
+}
+@media(max-width: 1219px){
     .pages{
-        font-size: 1rem;
+        font-size: 250%;
     }
-    .menu{
+}
+@media(max-width: 991px){
+    .info_eloy{
         display: flex;
-        justify-content: center;
-        padding: 3rem;
+        flex-direction: column-reverse;
+        align-items: center;
     }
-    .items{
-        font-size: 1.5rem;
+    .foto_eloy{
+        width: 40vw;
+        height: 50vw;
     }
+    .descripcion{
+        grid-area: texto;
+        text-align: center;
+        font-size: 150%;
+    }
+    .elian_img{
+        width: 30vw;
+        height: 40vw;
+        size: 100%;
+        grid-area: morro;
+    }
+    .alejo_img{
+        width: 30vw;
+        height: 40vw;
+        grid-area: alejo;
+    }
+    .hijos_eloy{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas: 
+            "alejo morro"
+            "texto texto";
+    }
+    .info_ivan{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .ivan_img{
+        width: 40vw;
+        height: 50vw;
+    }
+    .nombres{
+        font-size: 100%;
+    }
+}
+@media(max-width: 950px){
     .cortes{
-        height: 60vh;
+        width: 40vw;        
     }
     .barba{
-        height: 60vh;
+        width: 40vw;
     }
     .cejas{
-        height: 60vh;
-    }
-    .servicios_img{
-        width: 60vw;
-        height: 50vh;
-        padding: 1rem;
-    
+        width: 40vw;
     }
 }
-@media (max-width: 598px){
+@media(max-width: 937px){
+    .horarios{
+        font-size: 170%;
+    }
+}
+@media(max-width: 860px){
+    .la_pelu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .veni{
+        width: 90vw;
+        margin: 0;
+    }
+    .atencion{
+        width: 90vw;
+        margin: 0px 0px 5px 0px;
+    }
+    .carrusel{
+        width: 90vw;
+    }
+}
+@media(max-width: 760px){
     .titulo1{
-        font-size: 4.5rem;
-        margin: 2.5rem 1.5rem;
-        padding: 1rem .5rem;
+        font-size: 5rem;
     }
     .titulo2{
-        font-size: 4.5rem;
-        margin: 2rem;
-        padding: 1rem .5rem;
+        font-size: 5rem;
     }
-    .items{
-        margin: 1rem 1.5rem;
+}
+@media(max-width: 690px){
+    .calendario{
+        width: 120px;
     }
-    .pie{
-        padding: 2rem 1rem;
+    .wpplogo{
+        width: 120px;
     }
-    .navegacion1{
-        margin-right: .5rem;
+}
+@media(max-width: 674px){
+    .pages{
+        font-size: 200%;
     }
-    .navegacion2{
-        margin-left: 1rem;
+    .servicios{
+        flex-direction: column;
     }
-    .imagen{
-        position: relative;
+    .barba{
+        width: 70vw;
+    }
+    .cejas{
+        width: 70vw;
+    }
+    .cortes{
+        width: 70vw;
+    }
+    .diseños{
+        width: 60vw;
+        height: auto;
+    }
+}
+@media(max-width: 665px){
+    .logosredes{
+        display: flex;
+        flex-direction: column;
+    }
+    .calendario{
+        display: none;
+    }
+}
+@media(max-width: 584px){ 
+    .pages{
+        font-size: 120%;
+    }
+}
+@media(max-width: 515px){
+    .wpplogo{
+        width: 100px;
+    }
+    .numero{
+        font-size: 200%;
+    }
+    .imgcelu{
+        width: 200px;
+    }
+    .logos{
+        width: 100px;
+    }
+    .usuario{
+        font-size: 170%;
+    }
+    .inforedes{
+        gap: 0;
+    }
+}
+@media(max-width: 500px){
+    .titulo1{
+        font-size: 4rem;
+        -webkit-text-stroke: 2px;
+        -webkit-text-stroke-color: rgb(179, 179, 179);
+    }
+    .titulo2{
+        font-size: 4rem;
+        -webkit-text-stroke: 2px;
+        -webkit-text-stroke-color: white;
+    }
+}
+@media(max-width: 450px){
+    .titulos_barberos{
+        font-size: 250%;
+        text-align: center;
+    }
+    .elian_img{
+        width: 30vw;
+        height: 50vw;
+    }
+    .alejo_img{
+        width: 30vw;
+        height: 50vw;
+    }
+}
+@media(max-width: 401px){
+    .títulos_servicios{
+        font-size: 300%;
+        -webkit-text-stroke: 2px;
+        -webkit-text-stroke-color: #245050;
+    }
+    .numero{
+        font-size: 150%;
+    }
+}
+@media(max-width: 375px){
+    .inforedes{
+        flex-direction: column;
+    }
+    .titulos_pages{
+        font-size: 300%;
+    }
+}
+@media(max-width: 370px){
+    .hijos_eloy{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas: 
+            "alejo"
+            "morro"
+            "texto";
+    }
+    .elian_img{
+        width: 40vw;
+        height: 50vw;
+    }
+    .alejo_img{
+        width: 40vw;
+        height: 50vw;
+    }
+    .desc_hijos{
+        font-size: 100%;
+    }
+}
+@media(max-width: 325px){
+    .encabezado{
+        display: flex;
+        justify-content: center;
     }
 }
