--- a/scss/main.css
+++ b/scss/main.css
@@ -20,6 +20,50 @@ a {
   font-weight: bold;
 }
 
+h1 {
+  font-family: bogart;
+}
+
+h2 {
+  font-family: bogart;
+}
+
+h3 {
+  color: darkslategray;
+  font-size: 2.5rem;
+  font-family: Tommy;
+}
+
+h4 {
+  color: black;
+  font-size: 1.5rem;
+  font-family: Tommy;
+}
+
+p {
+  font-family: Tommy;
+}
+
+.titulos_pages {
+  font-size: 400%;
+  font-family: Tommy;
+  color: black;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+.pie_pages {
+  padding: 2rem;
+  background-color: rgb(100, 100, 100);
+  border-top: black;
+  border-top-width: 3px;
+  border-top-style: solid;
+}
+.pie_pages .lotos_pie {
+  font-size: 2rem;
+  color: black;
+}
+
 .encabezado {
   background-color: #222725;
   display: flex;
@@ -56,30 +100,6 @@ a {
   color: #222725;
 }
 
-h1 {
-  font-family: bogart;
-}
-
-h2 {
-  font-family: bogart;
-}
-
-h3 {
-  color: darkslategray;
-  font-size: 2.5rem;
-  font-family: Tommy;
-}
-
-h4 {
-  color: black;
-  font-size: 1.5rem;
-  font-family: Tommy;
-}
-
-p {
-  font-family: Tommy;
-}
-
 main {
   background-color: #c2c2c2;
 }
@@ -92,6 +112,7 @@ main .principal_page {
   align-items: center;
   justify-content: center;
   width: 100vw;
+  height: 90vh;
 }
 main .principal_page .titulo1 {
   font-size: 6rem;
@@ -213,26 +234,6 @@ main .principal_page .titulo2 {
   border-radius: 2rem;
 }
 
-.titulos_pages {
-  font-size: 400%;
-  font-family: Tommy;
-  color: black;
-  text-align: center;
-  padding-top: 1rem;
-}
-
-.pie_pages {
-  padding: 2rem;
-  background-color: rgb(100, 100, 100);
-  border-top: black;
-  border-top-width: 3px;
-  border-top-style: solid;
-}
-.pie_pages .lotos_pie {
-  font-size: 2rem;
-  color: black;
-}
-
 .servicios {
   margin: 2rem 0.5rem 0rem 0.5rem;
   padding: 1rem 0rem;
@@ -252,10 +253,14 @@ main .principal_page .titulo2 {
   align-items: center;
   justify-content: start;
   width: 30vw;
-  height: 90vh;
+  height: 80vh;
   border: #151a1a;
   border-style: solid;
   border-width: 0.5rem;
+}
+.servicios .cortes:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .servicios .barba {
   background-image: url(../images/barba.jpg);
@@ -267,10 +272,14 @@ main .principal_page .titulo2 {
   align-items: center;
   justify-content: start;
   width: 30vw;
-  height: 90vh;
+  height: 80vh;
   border: #151a1a;
   border-style: solid;
   border-width: 0.5rem;
+}
+.servicios .barba:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .servicios .cejas {
   background-image: url(../images/cejas.jpg);
@@ -282,10 +291,14 @@ main .principal_page .titulo2 {
   align-items: center;
   justify-content: flex-start;
   width: 30vw;
-  height: 90vh;
+  height: 80vh;
   border: #151a1a;
   border-style: solid;
   border-width: 0.5rem;
+}
+.servicios .cejas:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 .servicios .diseños_cortes {
   display: flex;
@@ -305,6 +318,9 @@ main .principal_page .titulo2 {
 .servicios .diseños_cortes .diseños {
   width: 40vw;
   height: auto;
+  border: #151a1a;
+  border-style: solid;
+  border-width: 1rem;
 }
 
 .títulos_servicios {
@@ -327,6 +343,10 @@ main .principal_page .titulo2 {
   margin-top: 3%;
   margin-bottom: 3%;
 }
+.barberos .eloy .titulos_barberos {
+  font-size: 400%;
+  color: bisque;
+}
 .barberos .eloy .info_eloy {
   display: flex;
   flex-direction: row;
@@ -336,9 +356,16 @@ main .principal_page .titulo2 {
   width: 20vw;
   height: 25vw;
 }
+.barberos .eloy .info_eloy .foto_eloy:hover {
+  transform: scale(1.25);
+  transition: 0.5s;
+}
+.barberos .eloy .info_eloy .descripcion {
+  color: #9b9b9b;
+}
 
 .hijos {
-  background-color: midnightblue;
+  background-color: rgb(67, 67, 74);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -346,16 +373,27 @@ main .principal_page .titulo2 {
 }
 .hijos .titulos_barberos {
   font-size: 350%;
+  text-align: center;
+  color: black;
 }
 .hijos .hijos_eloy {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-.hijos .barbero {
+.hijos .hijos_eloy .descripcion {
+  color: rgb(12, 9, 9);
+}
+
+.barbero {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.barbero:hover {
+  transform: scale(1.25);
+  transition: 0.5s;
 }
 
 .descripcion {
@@ -363,17 +401,24 @@ main .principal_page .titulo2 {
 }
 
 .caja_ivan {
-  background-color: orange;
+  background-color: rgb(0, 0, 0);
   padding: 2%;
   margin-top: 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.caja_ivan .titulos_barberos {
+  text-align: center;
+  color: #245050;
+}
 .caja_ivan .info_ivan {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.caja_ivan .info_ivan .descripcion {
+  color: #9b9b9b;
 }
 
 .info {
@@ -389,12 +434,12 @@ main .principal_page .titulo2 {
 .nombres {
   font-size: 200%;
   color: white;
+  text-align: center;
 }
 
 .barberos_fotos {
   width: 15vw;
   height: 20vw;
-  justify-items: center;
 }
 
 .redes_contacto {
@@ -429,6 +474,10 @@ main .principal_page .titulo2 {
   color: rgb(0, 107, 32);
   font-family: Tommy;
 }
+.redes_contacto .whatsapp .numerowpp .numero:hover {
+  transition: 0.5s;
+  color: rgb(54, 196, 42);
+}
 .redes_contacto .redes_sociales {
   padding: 2rem 1rem;
   width: 45vw;
@@ -459,7 +508,26 @@ main .principal_page .titulo2 {
   font-size: 220%;
   font-family: Tommy;
 }
+.redes_contacto .redes_sociales .inforedes .logosredes:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+  background-image: linear-gradient(to right, #830195, #f7b20a);
+}
 
+@media (max-width: 1450px) {
+  .servicios .cortes {
+    width: 45vw;
+    height: 70vh;
+  }
+  .servicios .barba {
+    width: 45vw;
+    height: 70vh;
+  }
+  .servicios .cejas {
+    width: 45vw;
+    height: 70vh;
+  }
+}
 @media (max-width: 1353px) {
   .redes_contacto {
     display: flex;
@@ -548,13 +616,16 @@ main .principal_page .titulo2 {
 }
 @media (max-width: 950px) {
   .servicios .cortes {
-    width: 40vw;
+    width: 80vw;
+    height: 50vh;
   }
   .servicios .barba {
-    width: 40vw;
+    width: 80vw;
+    height: 50vh;
   }
   .servicios .cejas {
-    width: 40vw;
+    width: 80vw;
+    height: 50vh;
   }
 }
 @media (max-width: 937px) {
@@ -581,6 +652,9 @@ main .principal_page .titulo2 {
   }
 }
 @media (max-width: 760px) {
+  main .principal_page {
+    height: 80vh;
+  }
   main .principal_page .titulo1 {
     font-size: 5rem;
   }
@@ -631,17 +705,26 @@ main .principal_page .titulo2 {
     font-size: 120%;
   }
 }
+@media (max-width: 560px) {
+  .servicios .diseños_cortes .texto-diseños {
+    font-size: 200%;
+  }
+  .servicios .diseños_cortes .diseños {
+    width: 70vw;
+    height: auto;
+  }
+}
 @media (max-width: 515px) {
-  .redes_contacto .redes_sociales .inforedes .inforedes {
+  .redes_contacto .redes_sociales .inforedes {
     gap: 0;
   }
-  .redes_contacto .redes_sociales .inforedes .inforedes .imgcelu {
+  .redes_contacto .redes_sociales .inforedes .imgcelu {
     width: 200px;
   }
-  .redes_contacto .redes_sociales .inforedes .inforedes .logosredes .logos {
+  .redes_contacto .redes_sociales .inforedes .logosredes .logos {
     width: 100px;
   }
-  .redes_contacto .redes_sociales .inforedes .inforedes .logosredes .usuario {
+  .redes_contacto .redes_sociales .inforedes .logosredes .usuario {
     font-size: 170%;
   }
   .redes_contacto .whatsapp .numerowpp .wpplogo {
@@ -662,8 +745,17 @@ main .principal_page .titulo2 {
     -webkit-text-stroke: 2px;
     -webkit-text-stroke-color: white;
   }
+  .redes_contacto .redes_sociales .inforedes .logosredes .logos {
+    width: 100px;
+  }
+  .redes_contacto .redes_sociales .inforedes .logosredes .usuario {
+    font-size: 150%;
+  }
 }
 @media (max-width: 450px) {
+  .hijos .titulos_barberos {
+    font-size: 250%;
+  }
   .titulos_barberos {
     font-size: 250%;
     text-align: center;
@@ -683,8 +775,25 @@ main .principal_page .titulo2 {
     -webkit-text-stroke: 2px;
     -webkit-text-stroke-color: #245050;
   }
+  .servicios .cortes {
+    width: 90vw;
+    height: 40vh;
+  }
+  .servicios .barba {
+    width: 90vw;
+    height: 40vh;
+  }
+  .servicios .cejas {
+    width: 90vw;
+    height: 40vh;
+  }
   .redes_contacto .whatsapp .numerowpp .numero {
     font-size: 150%;
+  }
+}
+@media (max-width: 386px) {
+  .servicios .diseños_cortes .texto-diseños {
+    font-size: 170%;
   }
 }
 @media (max-width: 375px) {
@@ -693,6 +802,12 @@ main .principal_page .titulo2 {
   }
   .titulos_pages {
     font-size: 300%;
+  }
+  .encabezado .navegacion {
+    justify-content: center;
+  }
+  .encabezado .navegacion .pages {
+    text-align: center;
   }
 }
 @media (max-width: 370px) {
